--- a/pages/bottom_menu/bottom_menu.wxml
+++ b/pages/bottom_menu/bottom_menu.wxml
@@ -1,11 +1,11 @@
 <view class="bottomrow">
     <view bindtap="first_select" class="bottomtab">
-        <text class="bottomtabText" style="color:{{firco}}">首页</text>
+        <text class="bottomtabText" style="color:{{firco}}">排队</text>
     </view>
     <view bindtap="second_select" class="centerimg">
         <image class="bottomImg" src="http://08.adreq.top/gs/add.png"></image>
     </view>
     <view bindtap="third_select" class="bottomtab">
-        <text class="bottomtabText" style="color:{{secco}}">我的</text>
+        <text class="bottomtabText" style="color:{{secco}}">说明</text>
     </view>
 </view>
