--- a/pages/map/map.wxss
+++ b/pages/map/map.wxss
@@ -6,6 +6,32 @@
     height: 500rpx;
 }
 
+.switch_area{
+    width:90%;
+    height: 50rpx;
+    display: flex;
+    flex-direction: raw;
+    
+    margin-bottom: 20rpx;
+}
+
+.switch_btn{
+    margin-left: 0;
+    padding-bottom: 5rpx;
+    height: 60rpx;
+    background-color: #009900;
+    color: #ffffff;
+    font-style: normal;
+    font-size: 30rpx;
+
+}
+
+.location_info{
+    margin-top: 10rpx;
+    font-size: 30rpx;
+    color: #8585ad;
+}
+
 .list_area{
     margin-top: 50rpx;
     align-items: center;
@@ -20,11 +46,12 @@
  .box{
     /* width: 90%;  */
     width: 90%;
-    border: 3rpx solid #000000;
+    border-top: 3rpx solid #000000;
+    border-right: 3rpx solid #000000;
+    border-bottom: 3rpx solid #000000;
     height: 60rpx;
     display: flex;
     flex-direction: row;
-
  }
 
  .text_content{
@@ -34,5 +61,5 @@
     width: 40%;
     height: 60rpx;
     border-left: 3rpx solid #000000;
-    border-right: 3rpx solid #000000;
+    /* border-right: 3rpx solid #000000; */
  }
