--- a/pages/submit/submit.wxss
+++ b/pages/submit/submit.wxss
@@ -3,3 +3,72 @@
     width: 100%; 
     height: 500rpx;
 }
+
+.submit_area{
+    margin-top: 50rpx;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+    height: 500rpx;
+    display: flex;
+    flex-direction: column;
+    /* border: 3rpx solid #000000; */
+}
+
+.section{
+    display: flex;
+    flex-direction: row;
+    width: 90%;
+    height: 60rpx;
+    border: 3rpx solid #000000;
+}
+
+.section_title{
+    padding-top: 11rpx;
+    font-size: 25rpx;
+    height: 60rpx;
+    width: 20%;
+    /* border-left: 3rpx solid #000000; */
+}
+
+.picker{
+    padding-top: 5rpx;
+    font-size: 30rpx;
+    height: 55rpx;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    width: 60%;
+    border-left: 3rpx solid #000000;
+    display: flex;
+    flex-direction: row;
+}
+
+.instruction{
+    margin-left: 0;
+    padding-top: 15rpx;
+    width: 30%;
+    font-size: 20rpx;
+    color: #8585ad;
+}
+
+.picker_view{
+    width: 300rpx;
+    font-size: 25rpx;
+    height: 40rpx;
+    /* border: 3rpx solid #000000; */
+    background-color: #009900;
+    color: #ffffff;
+}
+
+.submit_btn{
+    margin-top: 50rpx;
+    border-radius: 10rpx;
+    padding-top: 5rpx;
+    width: 180rpx;
+    height: 50rpx;
+    font-size: 30rpx;
+    background-color: #009900;
+    color: #ffffff;
+}
