--- a/pages/explain/explain.wxml
+++ b/pages/explain/explain.wxml
@@ -3,6 +3,6 @@
 <include src="/pages/bottom_menu/bottom_menu" />
 
 <import src="/wxParse/wxParse.wxml"/>
-<view class='contentarea'>
+<view class='contentarea' bindtap="copy">
 <template is="wxParse" data="{{wxParseData:article.nodes}}"/>
 </view>
