--- a/pages/submit/submit.wxml
+++ b/pages/submit/submit.wxml
@@ -14,6 +14,7 @@
 <image class="top_pic" src="/imgs/1.png" wx:if="{{area_index==0}}"></image>    
 <image class="top_pic" src="/imgs/2.png" wx:if="{{area_index==1}}"></image>    
 <image class="top_pic" src="/imgs/3.png" wx:if="{{area_index==2}}"></image>    
+<image class="top_pic" src="/imgs/4.png" wx:if="{{area_index==3}}"></image>    
 
 <view class="submit_area">
 <view class="section">
@@ -45,3 +46,5 @@
 </view>
 <view class="submit_btn" bindtap="presubmit">保存</view>
 </view>
+
+<view class="bottom_text">选择校区切换地图</view>
