--- a/pages/submit/submit.wxml
+++ b/pages/submit/submit.wxml
@@ -15,6 +15,7 @@
 <image class="top_pic" src="/imgs/2.png" wx:if="{{area_index==1}}"></image>    
 <image class="top_pic" src="/imgs/3.png" wx:if="{{area_index==2}}"></image>    
 <image class="top_pic" src="/imgs/4.png" wx:if="{{area_index==3}}"></image>    
+<image class="top_pic" src="/imgs/5.png" wx:if="{{area_index==4}}"></image>    
 
 <view class="submit_area">
 <view class="section">
